--- a/src/pug/basics/basics/index.html.pug
+++ b/src/pug/basics/basics/index.html.pug
@@ -3,7 +3,7 @@ extends ../../main/_html
 block append vars
   - pageid = 'basics'
   - title = `Basics | ${name}`
-  - description = 'Basic layouts.'
+  - description = 'Basic blocks.'
 
 block header
   header._container
