--- a/src/pug/main/index.html.pug
+++ b/src/pug/main/index.html.pug
@@ -5,7 +5,7 @@ block append vars
   - siteUrl += '/index.html'
   -
     title       = 'BareCSS'
-    description = 'Minimal framework for a clean interface.'
+    description = 'Simple framework for a clean interface.'
 
 block append style
   style.
