--- a/src/pug/main/lab/index.html.pug
+++ b/src/pug/main/lab/index.html.pug
@@ -3,7 +3,7 @@ extends ../../main/_html
 block append vars
   - pageid = 'lab'
   - title = `Lab | ${name}`
-  - description = 'Testing upcoming features and upgrades.'
+  - description = 'Laboratory for upcoming features and upgrades.'
 
 block append style
   style.
