--- a/src/pug/main/lab/temp.html.pug
+++ b/src/pug/main/lab/temp.html.pug
@@ -3,7 +3,7 @@ extends ../../main/_html
 block append vars
   - pageid = 'lab/temp'
   - title = `Temp | ${name}`
-  - description = 'Temporary lab stuff.'
+  - description = 'Temporary stuff.'
 
 block append style
   style.
