--- a/src/pug/main/_nav.pug
+++ b/src/pug/main/_nav.pug
@@ -45,7 +45,9 @@ mixin core_nav
   //- ['core/table','core/table.html','Table'],
   //- ['core/button','core/button.html','Button'],
   +menu_style_a2([
+    ['core/basic','core/basic.html','Basic'],
     ['core/text','core/text.html','Text'],
+    ['core/table','core/table.html','Table'],
     ['core/link','core/link.html','Link'],
     ['core/details','core/details.html','Details'],
     ['core/flex','core/flex.html','Flex'],
