--- a/src/pug/main/core/details.html.pug
+++ b/src/pug/main/core/details.html.pug
@@ -18,7 +18,7 @@ block header
 block article
   +core_nav
   hr
-  article(style="padding-bottom:1.8rem")
+  article(style="padding-bottom:4em")
     section._container
       details
         summary._no_select Summary
