--- a/src/pug/main/core/flex.html.pug
+++ b/src/pug/main/core/flex.html.pug
@@ -18,7 +18,7 @@ block header
 block article
   +core_nav
   hr
-  article
+  article(style="padding-bottom:4em")
     section
       style.
         ._flex {
