--- a/src/pug/main/index.html.pug
+++ b/src/pug/main/index.html.pug
@@ -25,12 +25,11 @@ block append style
     header._container {
       max-width:60em;
       padding-left:.5rem;padding-right:.5rem;
-      margin-left:auto;margin-right:auto;
     }
   //- style.
 
 block header
-  header._container
+  header._container._center_m._table
     +logo
     span#maindesc= description
   +main_nav
