--- a/src/pug/main/lab/temp.html.pug
+++ b/src/pug/main/lab/temp.html.pug
@@ -21,5 +21,36 @@ block article
   article(style="padding-bottom:1.8rem")
     section._container: pre._scrollable.pre.
       // New features to be implemented soon ..
+      
+      #[span#localStorage]
     //- pre.
-    section._container: pre.pre.
+    hr
+    section._container
+      button(onclick="localStorage.clear();updateLog();") Clear Storage
+
+
+block prepend script
+  script.
+    (()=>{
+      const
+        w = window,
+        d = document,
+        eid = (id) => d.getElementById(id),
+        hid = (id,html) => eid(id).innerHTML=html,
+        storage = localStorage,
+        { log } = console;
+      const
+        updateLog = w.updateLog = () => {
+          hid('localStorage', [
+            `storage.length: ${storage.length}`
+          ].join('\n'));
+        };
+      //
+      w.addEventListener("storage", (event) => {
+        updateLog();
+      });
+      d.addEventListener('DOMContentLoaded', () => {
+        updateLog();
+      });
+    })();
+  //- 
