--- a/src/pug/main/lab/temp.html.pug
+++ b/src/pug/main/lab/temp.html.pug
@@ -7,6 +7,7 @@ block append vars
 
 block append style
   style.
+    #btns button { margin:.25rem }
   //- style.
 
 block header
@@ -25,8 +26,10 @@ block article
       #[span#localStorage]
     //- pre.
     hr
-    section._container
+    section._container#btns
       button(onclick="localStorage.clear();updateLog();") Clear Storage
+      br
+      button(onclick="theme.change();updateLog();") Change Theme
 
 
 block prepend script
